# logdigo

./: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: app_handle.rs  lib.rs  main.rs
crates/app/src/app/: brain.rs  mod.rs
crates/app/src/app/renderer/: bind_groups.rs  camera2d.rs  mod.rs  shader.wgsl  texture.rs
crates/app/src/app/renderer/pipelines/: line.rs  mod.rs  rect.rs  rect.wgsl  round_rect.rs
crates/app/src/app/renderer/util/: id_vec.rs  instance_buffer.rs  mod.rs
crates/app/src/app/ui/: mod.rs
crates/app/src/app/ui/object/: block.rs  mod.rs  wire.rs
crates/app/src/app/ui/painter/: block.rs  mod.rs  wire.rs
crates/window/: Cargo.toml
crates/window/src/: app_handle.rs  lib.rs
crates/window/src/app/: brain.rs  mod.rs
crates/window/src/app/_graphics/: camera.rs  graphics_app.rs  mod.rs
crates/window/src/app/_graphics/models/: mod.rs  texture_rect.rs  texture_rect.wgsl
crates/window/src/app/_graphics/renderers/: mod.rs
crates/window/src/app/_renderer/: camera2d.rs  mod.rs
crates/window/src/app/_renderer/pipelines/: line.rs  line.wgsl  mod.rs  rect.rs  rect.wgsl  round_rect.rs
crates/window/src/app/_renderer/util/: id_vec.rs  instance_buffer.rs
crates/window/src/app/_ui/: mod.rs
crates/window/src/app/_ui/object/: block.rs  wire.rs
crates/window/src/graphics/: context.rs  mod.rs
crates/window/src/graphics/models/: camera.rs  mod.rs
crates/window/src/graphics/renderers/: block_atlas_renderer.rs  immediate.rs  mod.rs
crates/window/src/graphics/ui/: mod.rs
crates/window/src/graphics/util/: idvec.rs  mod.rs
(+79 files in other folders)
