[package]
name = "digolog_window"
version = "0.1.0"
edition = "2021"

[dependencies.wgpu]
version = "0.19"
default-features = false
features = ["wgsl"]

[dependencies.winit]
version = "0.30"
default-features = false
features = ["rwh_06"]

[dependencies.bytemuck]
version = "1.15.0"
features = ["derive"]

[dependencies]
async-std = "1.12"
derive_more = "0.99.17"
digolog_math.path = "../math"
guillotiere = "0.6.2"
smallvec = "2.0.0-alpha"
